--- a/LoginStyle.css
+++ b/LoginStyle.css
@@ -12,6 +12,15 @@ header{
     border-radius: 1px;
     justify-content: center;
 }
+.logo{
+    position: absolute;
+    border-radius: 50px;
+    border: 1px solid rgba(0, 0, 0, 0.5);
+    top: 2px;
+    left: 10px;
+    width: 60px;
+    height: auto;
+}
 .loginFrm{
     display: flex;
     flex-direction: column;
@@ -23,7 +32,7 @@ header{
 form{
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.2);
     text-align: center;
     background: white;
 }
