--- a/IndexStyle.css
+++ b/IndexStyle.css
@@ -7,7 +7,7 @@ body {
 header {
   display: flex;
   font: menu;
-  background-color: red;
+  background-color: blue;
   border-radius: 1px;
   justify-content: center;
 }
